--- a/src/Components/Shared/NavBar/NavBar.css
+++ b/src/Components/Shared/NavBar/NavBar.css
@@ -5,7 +5,7 @@
   width: 84px;
   height: 45px;
   color: #ffffff;
-  background: var(--primary);
+  background: #0052cc;
   padding: 12px 24px;
   outline: 0;
   border: 0;
