--- a/src/Components/Home/Faq/Faq.css
+++ b/src/Components/Home/Faq/Faq.css
@@ -12,11 +12,26 @@
   position: relative;
   opacity: 0.7;
 }
-.faq-subtitle{
-    font-size: 20px;
-    font-weight: 500;
+.faq-subtitle {
+  font-size: 20px;
+  font-weight: 500;
 }
-.faq-title{
-    font-size: 48px;
-    font-weight: 800;
+.faq-title {
+  font-size: 48px;
+  font-weight: 800;
+}
+.brand-div {
+  width: 100%;
+  height: 440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.brand-div {
+  color: #0052cc;
+}
+.brand-images-div {
+  display: flex;
+  justify-content: space-between;
 }
