--- a/src/Components/Shared/NavBar/NavBar.css
+++ b/src/Components/Shared/NavBar/NavBar.css
@@ -1,5 +1,10 @@
-.navbar{
-    border-bottom: 1px solid #C2D2EB;
+.navbar {
+  border-bottom: 1px solid #c2d2eb;
+}
+.navbar a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
 }
 .login-btn {
   width: 84px;
